--- a/css/style-hesh.css
+++ b/css/style-hesh.css
@@ -3,6 +3,117 @@
 }
 
 :root {
-    /* background color: #19A1AE */
+    --primary: #19A1AE;
+    --secondary: #2E3349;
+    --tertary: #6B7082;
+    --border: #979797;
 }
 
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: var(--primary);
+    font-family: 'Kumbh Sans', sans-serif;
+    position: relative;
+    margin: 0;
+}
+
+.card {
+    min-width: 326px;
+    min-height: 374px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0px 50px 100px -20px rgb(8 70 94 / 50%);
+    z-index: 50;
+}
+
+.user-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 48px;
+}
+
+.user {
+    position: relative;
+    bottom: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+.card-body {
+    flex-grow: 1;
+}
+
+.body {
+    border-bottom: 1px solid var(--border);
+}
+
+.user-details {
+    margin-bottom: 8px;
+}
+
+.user-details .name {
+    color: var(--secondary);
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.user-details .age {
+    color: var(--tertary);
+    font-size: 18px;
+}
+
+.user-location {
+    color: var(--tertary);
+    font-size: 14px;
+}
+
+.footer {
+    min-height: 88px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 38px;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-title {
+    font-size: 18px;
+    color: var(--secondary);
+    font-weight: bold;
+}
+
+.item-content {
+    font-size: 10px;
+    color: var(--tertary);
+    font-weight: normal;
+    letter-spacing: 1.5px;
+}
+
+.top-circle svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.bottom-circle svg {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+}
